<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.AuthActivity">

    <ImageView
        android:id="@+id/backgroundWave"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background_purple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3" />

    <ImageView
        android:id="@+id/logoIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_logo_palms"
        app:layout_constraintBottom_toBottomOf="@id/backgroundWave"
        app:layout_constraintTop_toTopOf="@id/backgroundWave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logoText"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/cd_app_logo"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/logoIcon"
        app:layout_constraintTop_toTopOf="@id/logoIcon"
        app:layout_constraintStart_toEndOf="@id/logoIcon"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/login_subtitle"
        android:textAlignment="center"
        android:textColor="@color/gray_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backgroundWave" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="name"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="24dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/mainActionButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_primary_background"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/formContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Ação Principal"/>

    <Button
        android:id="@+id/secondaryAuthButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/primary_purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActionButton"
        app:layout_constraintVertical_bias="0.2"
        tools:text="Ação Secundária"/>

</androidx.constraintlayout.widget.ConstraintLayout>